# quartz-metadata

./: .gitignore  Dockerfile  Makefile  README.md  dipdup.local.yml  dipdup.yml  mypy.ini  pyproject.toml
client/: README.md  package-lock.json  package.json
quartz_metadata/: const.py  models.py
quartz_metadata/handlers/: on_mint.py
quartz_metadata/hooks/: on_reindex.py  on_restart.py  on_synchronized.py  resolve_task_manager.py  resolve_token_metadata.py  resolver_job.py
quartz_metadata/types/ubisoft_quartz_minter/: storage.py
quartz_metadata/types/ubisoft_quartz_minter/parameter/: mint.py
